Press Page fixed Hero image on mobile

--- a/src/partials/press.scss
+++ b/src/partials/press.scss
@@ -58,7 +58,7 @@
         }
     }
     @media (max-width: 575px){
-        padding: 50px 0 0px;
+        padding: 70px 0 0px;
         .hero-press-content{
             min-height: 500px;
             gap: 5px;
@@ -71,9 +71,10 @@
     }
     @media (max-width: 425px){
         .hero-press-content{
-            min-height: 110vw;
+            min-height: 95vw;
             img{
-                width: 110vw;
+                width: 95vw;
+                margin-left: -10px;
             }
         }
     }
